Bug 32596 - [SNB] Mesa Xdemo offset causes system hang
Summary: [SNB] Mesa Xdemo offset causes system hang
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other Linux (All)
: high major
Assignee: haihao
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-22 22:12 UTC by Yi Sun
Modified: 2010-12-29 18:19 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Yi Sun 2010-12-22 22:12:34 UTC
System Environment:
--------------------------
platform:      Hunronriver(rev 08)

Kernel:        (drm-intel-fixes)63abf3edaf42d0b9f278df90fe41c7ed4796b6b1
Libdrm:        (master)2.4.23
Mesa:          (7.10)0e50c21e247b6d4246fcc2b583563a8f44bc4249
Xserver:       (server-1.9-branch)xorg-server-1.9.2.902
Xf86_video_intel: (master)2.13.902-1-g71af40a75fbdd1054b1111e8cbe67ad1f97e6613

Bug detailed description:
-------------------------
System hang so long as run the demo offset. The issue doesn't exist on Ironlake.
Comment 1 Wang Zhenyu 2010-12-27 01:07:37 UTC
commit b832ae8a4a77563c50a6e82c49b4732f6a0dbf11
Author: Xiang, Haihao <haihao.xiang@intel.com>
Date:   Mon Dec 27 16:39:08 2010 +0800

    i965: don't spawn GS thread for LINELOOP on Sandybridge
    
    LINELOOP is converted to LINESTRIP at the beginning of the 3D pipeline.
    This fixes https://bugs.freedesktop.org/show_bug.cgi?id=32596
Comment 2 Yi Sun 2010-12-29 17:39:49 UTC
Verified.
Comment 3 Wang Zhenyu 2010-12-29 18:07:15 UTC
Wrong click on reopen? heh


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.