i965: don't spawn GS thread for LINELOOP on Sandybridge

LINELOOP is converted to LINESTRIP at the beginning of the 3D pipeline.
This fixes https://bugs.freedesktop.org/show_bug.cgi?id=32596